[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-utils"
version = "0.1.0"
description = "Coordinate conversion helpers built on pyproj."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["pyproj>=3.5"]

[project.optional-dependencies]
dev = ["black", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
